# Kaimicraft

./: .gitignore  CMakeLists.txt  README.md  run.py
.cache/clangd/index/: _fixes.hpp.F08CEEE300EE5A5A.idx  _vectorize.hpp.04F4D234A793F8AC.idx  app.cpp.F377A4CB711AE34C.idx  app.h.28EAF1D9784541B1.idx  block.h.D78F98A6AB4B9DC3.idx  camera.cpp.B333452446C5F9AB.idx  camera.h.0DB5B4A4EE978A6B.idx  chunkmanager.cpp.15F337BE4790AC07.idx  chunkmanager.h.B4BD43E2BDDAD217.idx  common.hpp.319318D4EF137417.idx  compute_common.hpp.DC49DDE11A07F000.idx  compute_vector_decl.hpp.AD5F4CB45D04D26F.idx  compute_vector_relational.hpp.C76980ECDF8D3B46.idx  constants.hpp.9DAA511221B98FA1.idx  constants.inl.53106ED92E286CCB.idx  context.c.BA463A6DBC7F7347.idx  debug.cpp.8BDA627C268F044E.idx  debug.h.29B652BF1F2ADD00.idx  dirlight.h.95B4DD762CBAFEF4.idx  egl_context.c.6517AFD8F46687B9.idx  epsilon.hpp.E5085D55E69A1ABE.idx  epsilon.inl.F2431367EA012466.idx  exponential.hpp.42ECFB5E7DB0F3C5.idx  func_common.inl.E4DBFC5F6B7B8948.idx  func_exponential.inl.3A9FD7505F494B02.idx  func_geometric.inl.E607F5084619AF98.idx  func_integer.inl.8ECC9FE3B2FB2B11.idx  func_matrix.inl.ECD7F37C87276347.idx  func_packing.inl.D19145E2E06395E0.idx  func_trigonometric.inl.E4CE781D3B4591CB.idx  func_vector_relational.inl.B00DA6F231C7A866.idx  fwd.hpp.8E5C0CE3C32535C4.idx  geometric.hpp.14C7357647E09E54.idx  glew.c.B4D6AC3211269B6B.idx  glew.h.EB433EF20E62A1C7.idx  glewinfo.c.46E48B1EA5C7EA94.idx  glfw3.h.8777707E5DC7A38C.idx  glfw3native.h.0521802FA5AE9B89.idx  glm.hpp.17E3BD7F64559667.idx  glx_context.c.6ADDEF2E4B45AEB1.idx  (+234 more)
assets/shader/: fragshader.glsl  vertshader.glsl
assets/texture/: atlas.bbmodel  sun.bbmodel
src/: app.cpp  app.h  block.h  camera.cpp  camera.h  chunkmanager.cpp  chunkmanager.h  debug.cpp  debug.h  inputmanager.cpp  inputmanager.h  keyboard.cpp  keyboard.h  lightmanager.cpp  lightmanager.h  logo.cpp  logo.h  main.cpp  mesh.cpp  mesh.h  mouse.cpp  mouse.h  perlinnoise.cpp  perlinnoise.h  renderer.cpp  renderer.h  shader.cpp  shader.h  terraingenerator.cpp  terraingenerator.h  texturemanager.cpp  texturemanager.h  threadpool.cpp  threadpool.h  tile.cpp  tile.h  timemanager.cpp  timemanager.h  util.cpp  util.h  (+2 more)
src/light/: dirlight.h  pointlight.h  spotlight.h
